--- a/src/main/webapp/WEB-INF/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/index.html
@@ -2,6 +2,9 @@
 
 <html lang="en">
 <head>
+    <!-- build:css(app/) /resources/css/style.min.css -->
+    <link href="../../resources/css/app.css" rel="stylesheet" />
+    <!-- endbuild -->
     <link href="../../resources/css/app.css" rel="stylesheet" />
 </head>
 <body>
